# InfiniTAM-Dyn

./: .gitignore  CMakeLists.txt  InfiniTAM-Dyn.kdev4  InfiniTAM.cpp  README.md
.kdev4/: InfiniTAM-Dyn.kdev4
Engine/: ImageSourceEngine.cpp  ImageSourceEngine.h  UIEngine.cpp  UIEngine.h
ITMLib/: CMakeLists.txt
ITMLib/Engine/: ITMDenseMapper.cpp  ITMDenseMapper.h  ITMDepthTracker.cpp  ITMDepthTracker.h  ITMExternalTracker.cpp  ITMExternalTracker.h  ITMGroundTruthTracker.cpp  ITMGroundTruthTracker.h  ITMMainEngine.cpp  ITMMainEngine.h  ITMSceneReconstructionEngine.h  ITMTrackerFactory.h  ITMTrackingController.cpp  ITMTrackingController.h  ITMViewBuilder.h  ITMVisualisationEngine.h
ITMLib/Engine/DeviceAgnostic/: ITMRepresentationAccess.h  ITMSceneReconstructionEngine.h  ITMVisualisationEngine.h
ITMLib/Engine/DeviceSpecific/CPU/: ITMColorTracker_CPU.cpp  ITMMeshingEngine_CPU.cpp  ITMSceneReconstructionEngine_CPU.cpp  ITMSceneReconstructionEngine_CPU.h  ITMVisualisationEngine_CPU.cpp  ITMVisualisationEngine_CPU.h
ITMLib/Engine/DeviceSpecific/CUDA/: ITMCUDAUtils.h  ITMDepthTracker_CUDA.cu  ITMMeshingEngine_CUDA.cu  ITMMeshingEngine_CUDA.h  ITMSceneReconstructionEngine_CUDA.cu  ITMSceneReconstructionEngine_CUDA.h  ITMSwappingEngine_CUDA.cu  ITMSwappingEngine_CUDA.h  ITMViewBuilder_CUDA.cu  ITMVisualisationEngine_CUDA.cu  ITMVisualisationEngine_CUDA.h
ITMLib/Objects/: ITMIntrinsics.h  ITMLocalVBA.h  ITMMesh.h  ITMPose.cpp  ITMPose.h  ITMRenderState.h  ITMRenderState_VH.h  ITMScene.h  ITMVoxelBlockHash.h
ITMLib/Utils/: ITMCalibIO.cpp  ITMCalibIO.h  ITMLibDefines.h  ITMLibSettings.cpp  ITMLibSettings.h  ITMOxtsIO.cpp  ITMOxtsIO.h  VoxelDecayParams.h
ORUtils/: CMakeLists.txt  CUDADefines.cpp  CUDADefines.h  Image.h  MemoryBlock.h
Utils/: CMakeLists.txt  FileUtils.cpp  FileUtils.h  ImageIOpfm.cpp
cmake/: CUDACheckCompute.cmake
